src/objects/FieldServiceActivityProduct__c.object
<CustomObject>
    <description>SFDC1-166.
Tracks products behind the Field Service Activities.</description>
    <fields>
        <fullName>FieldServiceActivity__c</fullName>
        <description>SFDC1-166.
Reference to the field service activity.</description>
        <label>Field Service Activity</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Field Service Activity Products</relationshipLabel>
        <relationshipName>FieldServiceActivityProducts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PKIDFSAP__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>FSP{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID FSAP</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6381: Changing the lookup from Product to Product group</description>
        <label>Product Group</label>
        <referenceTo>ProductGroup__c</referenceTo>
        <relationshipLabel>Field Service Activity Products</relationshipLabel>
        <relationshipName>FieldServiceActivityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Field Service Activity Product</label>
    <nameField>
        <displayFormat>FSAPRD-{00000}</displayFormat>
        <label>Field Service Activity Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Service Activity Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>